--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 	<link rel="stylesheet" href="assets/css/responsive.css" type="text/css" media="all">
 	<!-- Coustom Animation CSS -->
 	<link rel="stylesheet" href="assets/css/coustom-animation.css" type="text/css" media="all">
-	<link rel="stylesheet" href="assets/css/scroll-up.css" type="text/css" media="all">	
+	<link rel="stylesheet" href="assets/css/scroll-up.css" type="text/css" media="all">
+	<link href="https://db.onlinewebfonts.com/a/sqXsB3zqrXR4xNbuFZMx3U3Uu4xZm1u2OJPnvYNz" rel="stylesheet" type="text/css"/>
 	<!-- modernizr js -->
 	<script src="assets/js/vendor/modernizr-3.5.0.min.js"></script>
 </head>
@@ -46,7 +47,7 @@
 <!-- loader -->
 <div class="loader-wrapper">
 	<div class="loader">
-		<img src="assets/images/logo.png">
+		<img src="assets/images/logo.png" height="50">
 	</div>
 	<div class="loder-section left-section"></div>
 	<div class="loder-section right-section"></div>
@@ -66,10 +67,10 @@
 				<div class="topber_right_social style_two">
 					<h2>FOLLOW US :</h2>
 					<ul class="top_header_social">
-						<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-						<li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
 						<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-						<li><a class="top-social-icon-left" href="#"><i class="fab fa-twitter"></i></a></li>
+						<li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+						<li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+						<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
 					</ul>
 				</div>
 			</div>
@@ -84,8 +85,8 @@
 		<div class="row align-items-center position-relative">
 			<div class="col-lg-2">
 				<div class="header-logo">
-					<a class="active_header" href="#"><img src="assets/images/logo.png" alt="logo"></a>
-					<a class="active_sticky" href="#"><img src="assets/images/logo.png" alt="logo"></a>
+					<a class="active_header" href="#"><img src="assets/images/logo.png" height="50" alt="logo"></a>
+					<a class="active_sticky" href="#"><img src="assets/images/logo.png" height="50" alt="logo"></a>
 				</div>
 			</div>
 			<div class="col-lg-10">
@@ -238,21 +239,21 @@
 </div>
 
 <section class="hero_area d-flex align-items-center">
+	<div class="slide-img parallax-effect" style="background:url(assets/images/bannaer2.jpg) center center / cover scroll no-repeat;"></div>
 	<div class="container">
 		<div class="row align-items-center">
 			<div class="col-lg-6">
 				<!-- hero content -->
 				<div class="hero_content">
-					<h4>BEST IT SOLUTION AGENCY</h4>
-					<h1>The world is at  <br>your hand!</h1>
+					<h1>The world is at  <br> <span class="position-relative word-slider"> your hand! </span> </h1>
 					<p>Through our integrated lingistic and marketing solutions, we ensure effective communication with 4 billion people around the globe enhancing your reach with clear and seamless message.</p>
 					<!-- slider button -->
 					<div class="slider_button">
 						<div class="hero_btn style_twos">
-							<a href="#"><i class="fa fa-arrow-left"></i> Our Services <span></span></a>
+							<a href="#"> Our Services  <i aria-hidden="true" class="flaticon flaticon-right-arrow"></i> <span></span></a>
 						</div>
 						<div class="hero_video_btn">
-							<a class="video-vemo-icon venobox vbox-item" href="#"><i class="fa fa-phone"></i></a>
+							<a class="video-vemo-icon venobox vbox-item" href="#"><i class="fa-solid fa-phone-volume" style="color: #ffffff;"></i></a>
 							<span>+2 010 65962515</span>
 						</div>
 					</div>
@@ -261,15 +262,9 @@
 			<div class="col-lg-6">
 				<div class="hero-thumb">
 					<img src="assets/images/slider.png" alt="">
-					<div class="hero_thumb_shape">
-						<img src="assets/images/main-home/hero3_dot_shape.png" alt="">
-					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="hero_shape rotate">
-		<img src="assets/images/main-home/box.png" alt="">
 	</div>
 </section>
 
@@ -278,8 +273,7 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="section_title text-center">
-					<h3>Our Respected Partners</h3>
-					<p>Mutarjimoon is an integrated Language & marketing services provider established in 2018 with a growth mindset solidifying its pisition as a Market Leader.</p>
+					<h2>Our Respected Partners</h2>
 				</div>
 			</div>
 		</div>
@@ -320,6 +314,15 @@
 
 <section class="about_area bg-light style_four">
 	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<div class="section-title style1">
+					<div class="section-title text-center mb-5">
+						<h2 class="title">More than a Translation &  Localization <br> Services Provider!</h2>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="row align-items-center">
 			<div class="col-lg-6 col-md-12">
 				<div class="about_thumb">
@@ -338,7 +341,7 @@
 								</svg>
 							</div>
 							<div class="like">
-								<img src="assets/images/iso-17100.webp" alt="" class="img-fluid">
+								<img src="assets/images/iso-17100.png" alt="" class="img-fluid">
 							</div>
 						</a>
 					</div>
@@ -356,11 +359,11 @@
 				</div>
 
 				<div class="about_button style_upper">
+					<div class="about_details ">
+						<a href="#">  <i class="flaticon flaticon-email"></i>  info@MUTRJIMOON.COM  <span></span></a>
+					</div>
 					<div class="about_btn style_two style_three">
 						<a href="#"><i class="flaticon flaticon-left-arrow"></i> More about us <span></span></a>
-					</div>
-					<div class="about_details ">
-						<a href="#"> info@MUTRJIMOON.COM <i class="flaticon flaticon-email"></i><span></span></a>
 					</div>
 				</div>
 			</div>
@@ -421,6 +424,7 @@
 				<div class="section_title text-center style_three style_shape pb-20">
 					<h4>Our Language and Marketing Solutions</h4>
 					<h2>Creativity beyond compare & Progress taking you there!</h2>
+					<p class="w-75 mx-auto mt-3 fs-5">We provide you with exceptional customized Translation Services integrated with extensive digital expertise coping those rapid widescale revolutions.</p>
 				</div>
 			</div>
 		</div>
@@ -429,11 +433,12 @@
 					<div class="service_single_item style_two style_four">
 						<div class="service_content">
 							<div class="service_icon">
-								<img src="assets/images/thumb.png" width="40" alt="">
+								<img src="assets/images/thumb.png" class="icon-img" width="40" alt="">
+								<img src="assets/images/thumb-hover.png" class="icon-img-hover" width="40" alt="">
 							</div>
 							<h3 class="mt-3"> <a href="#"> MTPE </a> </h3>
 							<div class="service_btn">
-								<a href="#">View Details <i class="flaticon flaticon-right-arrow"></i></a>
+								<a href="#">  View Details  <i class="flaticon flaticon-right-arrow"></i></a>
 							</div>
 						</div>
 					</div>
@@ -442,7 +447,8 @@
 				<div class="service_single_item style_two style_four">
 					<div class="service_content">
 						<div class="service_icon">
-							<img src="assets/images/thumb.png" width="40" alt="">
+							<img src="assets/images/thumb.png" class="icon-img" width="40" alt="">
+							<img src="assets/images/thumb-hover.png" class="icon-img-hover" width="40" alt="">
 						</div>
 						<h3 class="mt-3"> <a href="#"> Localization </a> </h3>
 						<div class="service_btn">
@@ -455,7 +461,8 @@
 				<div class="service_single_item style_two style_four">
 					<div class="service_content">
 						<div class="service_icon">
-							<img src="assets/images/thumb.png" width="40" alt="">
+							<img src="assets/images/thumb.png" class="icon-img" width="40" alt="">
+							<img src="assets/images/thumb-hover.png" class="icon-img-hover" width="40" alt="">
 						</div>
 						<h3 class="mt-3"> <a href="#"> Interpretation </a> </h3>
 						<div class="service_btn">
@@ -468,7 +475,8 @@
 				<div class="service_single_item style_two style_four">
 					<div class="service_content">
 						<div class="service_icon">
-							<img src="assets/images/thumb.png" width="40" alt="">
+							<img src="assets/images/thumb.png" class="icon-img" width="40" alt="">
+							<img src="assets/images/thumb-hover.png" class="icon-img-hover" width="40" alt="">
 						</div>
 						<h3 class="mt-3"> <a href="#"> Translation </a> </h3>
 						<div class="service_btn">
@@ -481,7 +489,8 @@
 				<div class="service_single_item style_two style_four">
 					<div class="service_content">
 						<div class="service_icon">
-							<img src="assets/images/thumb.png" width="40" alt="">
+							<img src="assets/images/thumb.png" class="icon-img" width="40" alt="">
+							<img src="assets/images/thumb-hover.png" class="icon-img-hover" width="40" alt="">
 						</div>
 						<h3 class="mt-3"> <a href="#"> Subtitling </a> </h3>
 						<div class="service_btn">
@@ -494,7 +503,8 @@
 				<div class="service_single_item style_two style_four">
 					<div class="service_content">
 						<div class="service_icon">
-							<img src="assets/images/thumb.png" width="40" alt="">
+							<img src="assets/images/thumb.png" class="icon-img" width="40" alt="">
+							<img src="assets/images/thumb-hover.png" class="icon-img-hover" width="40" alt="">
 						</div>
 						<h3 class="mt-3"> <a href="#"> DTP </a> </h3>
 						<div class="service_btn">
@@ -507,7 +517,8 @@
 				<div class="service_single_item style_two style_four">
 					<div class="service_content">
 						<div class="service_icon">
-							<img src="assets/images/thumb.png" width="40" alt="">
+							<img src="assets/images/thumb.png" class="icon-img" width="40" alt="">
+							<img src="assets/images/thumb-hover.png" class="icon-img-hover" width="40" alt="">
 						</div>
 						<h3 class="mt-3"> <a href="#"> Editing </a> </h3>
 						<div class="service_btn">
@@ -520,7 +531,8 @@
 				<div class="service_single_item style_two style_four">
 					<div class="service_content">
 						<div class="service_icon">
-							<img src="assets/images/thumb.png" width="40" alt="">
+							<img src="assets/images/thumb.png" class="icon-img" width="40" alt="">
+							<img src="assets/images/thumb-hover.png" class="icon-img-hover" width="40" alt="">
 						</div>
 						<h3 class="mt-3"> <a href="#"> Proofreading </a> </h3>
 						<div class="service_btn">
@@ -533,7 +545,8 @@
 				<div class="service_single_item style_two style_four">
 					<div class="service_content">
 						<div class="service_icon">
-							<img src="assets/images/thumb.png" width="40" alt="">
+							<img src="assets/images/thumb.png" class="icon-img" width="40" alt="">
+							<img src="assets/images/thumb-hover.png" class="icon-img-hover" width="40" alt="">
 						</div>
 						<h3 class="mt-3"> <a href="#"> Digital Marketing </a> </h3>
 						<div class="service_btn">
@@ -546,7 +559,8 @@
 				<div class="service_single_item style_two style_four">
 					<div class="service_content">
 						<div class="service_icon">
-							<img src="assets/images/thumb.png" width="40" alt="">
+							<img src="assets/images/thumb.png" class="icon-img" width="40" alt="">
+							<img src="assets/images/thumb-hover.png" class="icon-img-hover" width="40" alt="">
 						</div>
 						<h3 class="mt-3"> <a href="#"> Multilingual Content Creating </a> </h3>
 						<div class="service_btn">
@@ -559,7 +573,8 @@
 				<div class="service_single_item style_two style_four">
 					<div class="service_content">
 						<div class="service_icon">
-							<img src="assets/images/thumb.png" width="40" alt="">
+							<img src="assets/images/thumb.png" class="icon-img" width="40" alt="">
+							<img src="assets/images/thumb-hover.png" class="icon-img-hover" width="40" alt="">
 						</div>
 						<h3 class="mt-3"> <a href="#"> Language Consulting </a> </h3>
 						<div class="service_btn">
@@ -572,7 +587,8 @@
 				<div class="service_single_item style_two style_four">
 					<div class="service_content">
 						<div class="service_icon">
-							<img src="assets/images/thumb.png" width="40" alt="">
+							<img src="assets/images/thumb.png" class="icon-img" width="40" alt="">
+							<img src="assets/images/thumb-hover.png" class="icon-img-hover" width="40" alt="">
 						</div>
 						<h3 class="mt-3"> <a href="#"> Transcription </a> </h3>
 						<div class="service_btn">
@@ -762,7 +778,7 @@
 						</div>
 						<div class="call_info">
 							<p> Address: </p>
-							<span> 42 Fariq Awal Ali Amer Street, 6th District, Nasr City, Cairo </span>
+							<h3> 42 Fariq Awal Ali Amer Street, 6th District, Nasr City, Cairo </h3>
 						</div>
 					</div>
 				</div>
@@ -782,7 +798,7 @@
 			<div class="col-lg-12">
 				<div class="section_title text-center">
 					<h4> Latest News and Blogs </h4>
-					<h1> A trusted and insightful blog </h1>
+					<h2> A trusted and insightful blog </h2>
 				</div>
 			</div>
 		</div>
@@ -878,6 +894,12 @@
 						<p class="footer_desc">“Mutarjimoon” is a pioneering language and marketing solutions company enabling effective communication and global reach. </p>
 						<p> <strong>Direct contact:</strong> 42 Fariq Awal Ali Amer Street, 6th District, Nasr City, Cairo</p>
 						<p> <strong> E-Mail </strong> info@MUTRJIMOON.COM </p>
+						<ul class="top_header_social">
+							<li><a href="#" class="text-black"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="#" class="text-black"><i class="fa-brands fa-twitter"></i></a></li>
+							<li><a href="#" class="text-black"><i class="fa-brands fa-instagram"></i></a></li>
+							<li><a href="#" class="text-black"><i class="fab fa-linkedin-in"></i></a></li>
+						</ul>
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-6">
@@ -923,12 +945,14 @@
 								<li><a href="#"><i aria-hidden="true" class="flaticon flaticon-right-arrow"></i> Digital marketing</a></li>
 								<li><a href="#"><i aria-hidden="true" class="flaticon flaticon-right-arrow"></i> Media production </a></li>
 							</ul>
+							<a href="#" class="icon-iso mx-2"> <img src="assets/images/iso-17100.png" height="75"> </a>
+							<a href="#" class="icon-iso mx-2"> <img src="assets/images/iso-17100.png" height="75"> </a>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="row add-border style_two align-items-center">
-				<div class="col-md-7">
+				<div class="col-md-7 order-one">
 					<div class="footer-bottom-content">
 						<div class="footer-bottom-content-copy style_two">
 							<p>Copyright © 2025 Ahmed Farghally. Designed &amp; Developed </p>
