--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="assets/css/owl.carousel.min.css" type="text/css" media="all">
 	<!-- animate CSS -->
 	<link rel="stylesheet" href="assets/css/animate.css" type="text/css" media="all">
+	<link rel="stylesheet" href="assets/css/animate-2.css" type="text/css" media="all">
 	<!-- animated-text CSS -->
 	<link rel="stylesheet" href="assets/css/animated-text.css" type="text/css" media="all">
 	<!-- font-awesome CSS -->
@@ -58,7 +59,7 @@
 		<div class="row topber_upper align-items-center d-flex">
 			<div class="col-lg-8">
 				<div class="header-address-info d-flex gap-4">
-					<p> <span><i class="bi bi-envelope"></i></span> info@MUTRJIMOON.COM </p>
+					<p> <span><i class="bi bi-envelope"></i></span>  info@mutrjimoon.com </p>
 					<p> <span class="right_info"><i class="fas fa-phone-alt"></i></span> +2 010 6592515 </p>
 				</div>
 			</div>
@@ -274,34 +275,46 @@
 				</div>
 			</div>
 		</div>
-		<div class="row brand_upper">
-			<div class="brand_list owl-carousel">
-				<div class="col-lg-12">
-					<div class="single-brand-item style_two">
-						<div class="brand-thumb">
-							<img src="assets/images/c-3.png" alt="">
-						</div>
+		<div class="row">
+			<div class="marquee style1">
+				<div class="marquee-block">
+					<div class="brand-thumb">
+						<img src="assets/images/c-1.png" alt="">
+					</div>
+					<div class="brand-thumb">
+						<img src="assets/images/c-2.png" alt="">
+					</div>
+					<div class="brand-thumb">
+						<img src="assets/images/c-3.png" alt="">
+					</div>
+					<div class="brand-thumb">
+						<img src="assets/images/c-1.png" alt="">
+					</div>
+					<div class="brand-thumb">
+						<img src="assets/images/c-2.png" alt="">
+					</div>
+					<div class="brand-thumb">
+						<img src="assets/images/c-3.png" alt="">
 					</div>
 				</div>
-				<div class="col-lg-12">
-					<div class="single-brand-item style_two">
-						<div class="brand-thumb">
-							<img src="assets/images/c-1.png" alt="">
-						</div>
+				<div class="marquee-block">
+					<div class="brand-thumb">
+						<img src="assets/images/c-1.png" alt="">
 					</div>
-				</div>
-				<div class="col-lg-12">
-					<div class="single-brand-item style_two">
-						<div class="brand-thumb">
-							<img src="assets/images/c-2.png" alt="">
-						</div>
+					<div class="brand-thumb">
+						<img src="assets/images/c-2.png" alt="">
 					</div>
-				</div>
-				<div class="col-lg-12">
-					<div class="single-brand-item style_two">
-						<div class="brand-thumb">
-							<img src="assets/images/c-3.png" alt="">
-						</div>
+					<div class="brand-thumb">
+						<img src="assets/images/c-3.png" alt="">
+					</div>
+					<div class="brand-thumb">
+						<img src="assets/images/c-1.png" alt="">
+					</div>
+					<div class="brand-thumb">
+						<img src="assets/images/c-2.png" alt="">
+					</div>
+					<div class="brand-thumb">
+						<img src="assets/images/c-3.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -350,14 +363,14 @@
 					<h3>Mutarjimoon is an integrated Language & marketing services provider established in 2018 with a growth mindset solidifying its pisition as a Market Leader.</h3>
 					<p>Our real expertise exceeds those years; we bring the world at your hand taking you from local to global or vice versa by our:</p>
 					<ul class="list_about">
-						<li>Experienced and talented team of linguists, translators and academics.</li>
-						<li>Creative and result-driven marketers.</li>
+						<li> <i class="fa fa-check"></i> Experienced and talented team of linguists, translators and academics.</li>
+						<li> <i class="fa fa-check"></i> Creative and result-driven marketers.</li>
 					</ul>
 				</div>
 
 				<div class="about_button style_upper">
 					<div class="about_details ">
-						<a href="#">  <i class="flaticon flaticon-email"></i>  info@MUTRJIMOON.COM  <span></span></a>
+						<a href="#">  <i class="flaticon flaticon-email"></i>   info@mutrjimoon.com  <span></span></a>
 					</div>
 					<div class="about_btn style_two style_three">
 						<a href="#"> More about us <i class="flaticon flaticon-right-arrow ms-2"></i>  <span></span></a>
@@ -434,7 +447,7 @@
 							</div>
 							<h3 class="mt-3"> <a href="#"> MTPE </a> </h3>
 							<div class="service_btn">
-								<a href="#">  View Details  <i class="flaticon flaticon-right-arrow"></i></a>
+								<a href="#">  <i class="flaticon flaticon-right-arrow"></i></a>
 							</div>
 						</div>
 					</div>
@@ -447,7 +460,7 @@
 						</div>
 						<h3 class="mt-3"> <a href="#"> Localization </a> </h3>
 						<div class="service_btn">
-							<a href="#">View Details <i class="flaticon flaticon-right-arrow"></i></a>
+							<a href="#"><i class="flaticon flaticon-right-arrow"></i></a>
 						</div>
 					</div>
 				</div>
@@ -460,7 +473,7 @@
 						</div>
 						<h3 class="mt-3"> <a href="#"> Interpretation </a> </h3>
 						<div class="service_btn">
-							<a href="#">View Details <i class="flaticon flaticon-right-arrow"></i></a>
+							<a href="#"><i class="flaticon flaticon-right-arrow"></i></a>
 						</div>
 					</div>
 				</div>
@@ -474,7 +487,7 @@
 						</div>
 						<h3 class="mt-3"> <a href="#"> Translation </a> </h3>
 						<div class="service_btn">
-							<a href="#">View Details <i class="flaticon flaticon-right-arrow"></i></a>
+							<a href="#"><i class="flaticon flaticon-right-arrow"></i></a>
 						</div>
 					</div>
 				</div>
@@ -488,7 +501,7 @@
 						</div>
 						<h3 class="mt-3"> <a href="#"> Subtitling </a> </h3>
 						<div class="service_btn">
-							<a href="#">View Details <i class="flaticon flaticon-right-arrow"></i></a>
+							<a href="#"><i class="flaticon flaticon-right-arrow"></i></a>
 						</div>
 					</div>
 				</div>
@@ -502,7 +515,7 @@
 						</div>
 						<h3 class="mt-3"> <a href="#"> DTP </a> </h3>
 						<div class="service_btn">
-							<a href="#">View Details <i class="flaticon flaticon-right-arrow"></i></a>
+							<a href="#"><i class="flaticon flaticon-right-arrow"></i></a>
 						</div>
 					</div>
 				</div>
@@ -516,7 +529,7 @@
 						</div>
 						<h3 class="mt-3"> <a href="#"> Editing </a> </h3>
 						<div class="service_btn">
-							<a href="#">View Details <i class="flaticon flaticon-right-arrow"></i></a>
+							<a href="#"><i class="flaticon flaticon-right-arrow"></i></a>
 						</div>
 					</div>
 				</div>
@@ -530,7 +543,7 @@
 						</div>
 						<h3 class="mt-3"> <a href="#"> Proofreading </a> </h3>
 						<div class="service_btn">
-							<a href="#">View Details <i class="flaticon flaticon-right-arrow"></i></a>
+							<a href="#"><i class="flaticon flaticon-right-arrow"></i></a>
 						</div>
 					</div>
 				</div>
@@ -544,7 +557,7 @@
 						</div>
 						<h3 class="mt-3"> <a href="#"> Digital Marketing </a> </h3>
 						<div class="service_btn">
-							<a href="#">View Details <i class="flaticon flaticon-right-arrow"></i></a>
+							<a href="#"><i class="flaticon flaticon-right-arrow"></i></a>
 						</div>
 					</div>
 				</div>
@@ -558,7 +571,7 @@
 						</div>
 						<h3 class="mt-3"> <a href="#"> Multilingual Content Creating </a> </h3>
 						<div class="service_btn">
-							<a href="#">View Details <i class="flaticon flaticon-right-arrow"></i></a>
+							<a href="#"><i class="flaticon flaticon-right-arrow"></i></a>
 						</div>
 					</div>
 				</div>
@@ -572,7 +585,7 @@
 						</div>
 						<h3 class="mt-3"> <a href="#"> Language Consulting </a> </h3>
 						<div class="service_btn">
-							<a href="#">View Details <i class="flaticon flaticon-right-arrow"></i></a>
+							<a href="#"><i class="flaticon flaticon-right-arrow"></i></a>
 						</div>
 					</div>
 				</div>
@@ -586,7 +599,7 @@
 						</div>
 						<h3 class="mt-3"> <a href="#"> Transcription </a> </h3>
 						<div class="service_btn">
-							<a href="#">View Details <i class="flaticon flaticon-right-arrow"></i></a>
+							<a href="#"><i class="flaticon flaticon-right-arrow"></i></a>
 						</div>
 					</div>
 				</div>
@@ -763,7 +776,7 @@
 						</div>
 						<div class="call_info">
 							<p> Email: </p>
-							<h3>info@MUTRJIMOON.COM</h3>
+							<h3> info@mutrjimoon.com</h3>
 						</div>
 					</div>
 					<div class="call-do-action-info">
@@ -781,7 +794,7 @@
 
 	</div>
 
-	<div class="contact_shape2 dance2">
+	<div class="contact_shape2 dance2 d-none d-md-block">
 		<img src="assets/images/main-home/service_shpe2.png" alt="">
 	</div>
 </section>
@@ -887,7 +900,7 @@
 						</div>
 						<p class="footer_desc">“Mutarjimoon” is a pioneering language and marketing solutions company enabling effective communication and global reach. </p>
 						<p> <strong>Direct contact:</strong> 42 Fariq Awal Ali Amer Street, 6th District, Nasr City, Cairo</p>
-						<p> <strong> E-Mail </strong> info@MUTRJIMOON.COM </p>
+						<p> <strong> E-Mail </strong>  info@mutrjimoon.com </p>
 						<ul class="top_header_social">
 							<li><a href="#" class="text-black"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#" class="text-black"><i class="fa-brands fa-twitter"></i></a></li>
@@ -971,7 +984,7 @@
 			<div class="footer_shape_one bounce-animate">
 				<img src="assets/images/main-home/choose_rotete.png" height="250" alt="">
 			</div>
-			<div class="footer_shape_two bounce-animate">
+			<div class="footer_shape_two bounce-animate d-none d-md-block">
 				<img src="assets/images/main-home/footer_shape.png"  height="250" alt="">
 			</div>
 		</div>
