--- a/about.html
+++ b/about.html
@@ -251,6 +251,10 @@
 							<a href="#">Contact Us <i class="bi bi-arrow-right"></i></a>
 						</div>
 					</div>
+					<ul class="mt-4">
+						<li><a href="index.html"><i class="bi bi-house-door-fill"></i> Home </a></li>
+						<li class="rotates"><i class="bi bi-slash-lg"></i>Abour Us</li>
+					</ul>
 				</div>
 			</div>
 		</div>
