--- a/ViewCareer.html
+++ b/ViewCareer.html
@@ -245,18 +245,157 @@
 			<div class="col-lg-12 text-center">
 				<div class="breadcumb-content">
 					<div class="breadcumb-title">
-						<h1>Join our Team .. Be Mutarjimoonian!</h1>
-						<p>Join our creative and professional team that truly invests in you, your capabilities and your career path development. At Mutarjimoon, we provide you with a space that paves the way to our shared goals and successes.</p>
+						<h1>Specialized Korean Translator</h1>
+						<div class="d-flex gap-3 justify-content-center my-2">
+							<label class="text-main"> Sector: Translation  </label>
+							<label class="text-main"> Work basis: Freelance </label>
+						</div>
 					</div>
-                    <ul class="mt-4">
-                        <li><a href="index.html"><i class="bi bi-house-door-fill"></i> Home </a></li>
-                        <li class="rotates"><i class="bi bi-slash-lg"></i>Career</li>
-                    </ul>
+					<ul class="mt-4">
+						<li><a href="#"><i class="bi bi-house-door-fill"></i> Home </a></li>
+						<li class="rotates"><a href="#"> <i class="bi bi-slash-lg"></i> Career </a></li>
+						<li class="rotates"><i class="bi bi-slash-lg"></i>Specialized Korean Translator</li>
+					</ul>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
+
+
+<section class="block_view_jobs">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4 col-lg-4 col-12">
+				<div class="social_icon_share">
+					<label class="text-black mb-3"> Share this job </label>
+					<div class="sharing">
+						<a class="sharing-item sharing-facebook" href="#">
+							<svg class="i i-facebook" viewBox="0 0 24 24">
+								<path d="M17 14h-3v8h-4v-8H7v-4h3V7a5 5 0 0 1 5-5h3v4h-3q-1 0-1 1v3h4Z"></path>
+							</svg>
+						</a>
+						<a class="sharing-item sharing-twitter" href="#">
+							<svg class="i i-twitter" viewBox="0 0 24 24">
+								<path d="m3 21 7.5-7.5m3-3L21 3M8 3H3l13 18h5Z"></path>
+							</svg>
+						</a>
+						<a class="sharing-item sharing-pinterest" href="#">
+							<svg class="i i-pinterest" viewBox="0 0 24 24">
+								<circle cx="12" cy="12" r="11"></circle>
+								<path d="m8 22 3-11a1 1 0 0 0 5 5.5A6 6 0 1 0 6 12"></path>
+							</svg>
+						</a>
+						<a class="sharing-item sharing-vk" href="#">
+							<svg class="i i-vk" viewBox="0 0 24 24">
+								<rect width="22" height="22" x="1" y="1" rx="5"></rect>
+								<path d="M7 8.5a7 8 0 0 0 5 7v-7m5 0Q16 11 13 12q3 1 4 3.5M12 12h1"></path>
+							</svg>
+						</a>
+						<a class="sharing-item sharing-whatsapp" href="#">
+							<svg class="i i-whatsapp" viewBox="0 0 24 24">
+								<circle cx="9" cy="9" r="1"></circle>
+								<circle cx="15" cy="15" r="1"></circle>
+								<path d="M8 9a7 7 0 0 0 7 7m-9 5.2A11 11 0 1 0 2.8 18L2 22Z"></path>
+							</svg>
+						</a>
+						<a class="sharing-item sharing-envelope" href="#">
+							<svg class="i i-envelope" viewBox="0 0 24 24">
+								<rect width="20" height="16" x="2" y="4" rx="2"></rect>
+								<path d="m22 8-10 5L2 8"></path>
+							</svg>
+						</a>
+					</div>
+
+				</div>
+				<div class="position-relative">
+                	<div class="contact-form-box rounded-4 bg-main2 top-0 style_two" id="FormContactjob">
+                    <!-- section title -->
+                    <div class="section_title style_three style_four text-center ">
+                        <h2 class="text-white">Apply here!</h2>
+                    </div>
+                    <form action="#" method="POST">
+                        <div class="row">
+                            <div class="col-lg-12 col-md-12">
+                                <div class="form-box">
+                                    <input type="text" name="name" placeholder="Your Name">
+                                </div>
+                            </div>
+                            <div class="col-lg-12 col-md-12">
+                                <div class="form-box">
+                                    <input type="email" name="name" placeholder="E-Mail Address">
+                                </div>
+                            </div>
+                            <div class="col-lg-12 col-md-12">
+                                <div class="form-box">
+                                    <input type="text" name="name" placeholder="Phone No">
+                                </div>
+                            </div>
+                            <div class="col-lg-12 col-md-12">
+                                <div class="form-box">
+                                    <input type="text" name="name" placeholder="Your LinkedIn profile">
+                                </div>
+                            </div>
+                            <div class="col-lg-12 col-md-12">
+                                <div class="form-box">
+                                    <input type="file" class="cv-input position-relative" name="name" placeholder="CV">
+                                </div>
+                            </div>
+                            <div class="col-lg-12 col-md-12">
+                                <div class="form-box">
+                                    <input type="text" name="name" placeholder="Samples/Portfolio">
+                                </div>
+                            </div>
+                            <div class="col-lg-12 col-md-12">
+                                <div class="form-box">
+                                    <input type="text" name="name" placeholder="Expected Salary">
+                                </div>
+                            </div>
+                            <div class="col-lg-12 col-md-12">
+                                <div class="form-box">
+                                    <input type="date" class="date-input position-relative" name="name" placeholder="Start Date">
+                                </div>
+                            </div>
+                            <div class="contact-form">
+                                <button type="submit" class="w-100"><i class="far fa-envelope"></i> Submit </button>
+                            </div>
+                        </div>
+                    </form>
+                    <div id="status"></div>
+                </div>
+				</div>
+            </div>
+			<div class="col-md-8 col-lg-8 col-12">
+				<div class="details_job">
+					<h2>Job Summary</h2>
+					<p> We are looking for a Korean translator to join our creative and professional team. He/she will be responsible for delivering high quality and accurate translations to and from the Korean language, while ensuring the appropriate meaning, style, and cultural nuances of the source language (SL). </p>
+					<h3>Job Responsibilities</h3>
+					<ul>
+						<li>Accurately and professionally translate documents to and from the Korean language.</li>
+						<li>Review and edit translated documents to ensure high QA standards and avoidance of any grammatical and stylistic mistakes.</li>
+						<li>Cooperate with editing and marketing teams to ensure consistency across all translated materials.</li>
+						<li>Work on interpreting projects when needed.</li>
+						<li>Ensure the accuracy of technical and cultural terminologies.</li>
+						<li>Effectively manage and coordinate the projects deadlines.</li>
+					</ul>
+					<h3>Qualifications</h3>
+					<ul>
+						<li>Bachelor degree in translation, languages or any related field.</li>
+						<li>Proven track record of +2 years in translating to and from the Korean language.</li>
+						<li>Full mastery of the spoken and written Korean language.</li>
+						<li>Full command of the grammar and syntax of the SL and TL.</li>
+						<li>Ability to effectively and seamlessly work on various CAT tools.</li>
+						<li>Have strong analytical skills and attention to details.</li>
+						<li>Handle work pressure and tight deadlines.</li>
+					</ul>
+					<label>If you are interested, please send your CV to:</label>
+					<p>recruit@mutarjimoon.com</p>
+					<p>Or fill this application form.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 
 <section class="feature_area inner_page position-relative">
 	<div class="container">
@@ -330,73 +469,6 @@
 		<img src="assets/images/main-home/arrow.png" height="150" alt="">
 	</div>
 </section>
-
-<section class="faq_area">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="section_title mb-4">
-					<h2> Vacant Jobs </h2>
-				</div>
-			</div>
-		</div>
-		<div class="row mb-5">
-			<div class="col-md-3 col-lg-3">
-				<img src="assets/images/job.png" class="border rounded img-fluid">
-			</div>
-			<div class="col-md-9 col-lg-9">
-				<div class="list_job">
-					<h3>Specialized Korean Translator</h3>
-					<div class="d-flex gap-5 my-2">
-						<label class="text-main"> Sector: Translation  </label>
-						<label class="text-main"> Work basis: Freelance </label>
-					</div>
-					<p>We are looking for a Korean translator to join our creative and professional team. He/she will be responsible for delivering high quality and accurate translations to and from the Korean language, while ensuring the appropriate meaning, style, and cultural nuances of the source language (SL).</p>
-					<div class="header-button style_two">
-						<a href="#">More Details <i class="bi bi-arrow-right"></i></a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="row mb-5">
-			<div class="col-md-3 col-lg-3">
-				<img src="assets/images/job.png" class="border rounded img-fluid">
-			</div>
-			<div class="col-md-9 col-lg-9">
-				<div class="list_job">
-					<h3>Specialized Korean Translator</h3>
-					<div class="d-flex gap-5 my-2">
-						<label class="text-main"> Sector: Translation  </label>
-						<label class="text-main"> Work basis: Freelance </label>
-					</div>
-					<p>We are looking for a Korean translator to join our creative and professional team. He/she will be responsible for delivering high quality and accurate translations to and from the Korean language, while ensuring the appropriate meaning, style, and cultural nuances of the source language (SL).</p>
-					<div class="header-button style_two">
-						<a href="#">More Details <i class="bi bi-arrow-right"></i></a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="row mb-5">
-			<div class="col-md-3 col-lg-3">
-				<img src="assets/images/job.png" class="border rounded img-fluid">
-			</div>
-			<div class="col-md-9 col-lg-9">
-				<div class="list_job">
-					<h3>Specialized Korean Translator</h3>
-					<div class="d-flex gap-5 my-2">
-						<label class="text-main"> Sector: Translation  </label>
-						<label class="text-main"> Work basis: Freelance </label>
-					</div>
-					<p>We are looking for a Korean translator to join our creative and professional team. He/she will be responsible for delivering high quality and accurate translations to and from the Korean language, while ensuring the appropriate meaning, style, and cultural nuances of the source language (SL).</p>
-					<div class="header-button style_two">
-						<a href="#">More Details <i class="bi bi-arrow-right"></i></a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
 
 
 <footer>
