--- a/ViewCareer.html
+++ b/ViewCareer.html
@@ -266,7 +266,7 @@
 <section class="block_view_jobs">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-4 col-lg-4 col-12">
+			<div class="col-md-4 col-lg-4 col-12" style="width: 391px">
 				<div class="social_icon_share">
 					<label class="text-black mb-3"> Share this job </label>
 					<div class="sharing">
@@ -309,60 +309,59 @@
 
 				</div>
 				<div class="position-relative">
-                	<div class="contact-form-box rounded-4 bg-main2 top-0 style_two" id="FormContactjob">
-                    <!-- section title -->
-                    <div class="section_title style_three style_four text-center ">
-                        <h2 class="text-white">Apply here!</h2>
-                    </div>
-                    <form action="#" method="POST">
-                        <div class="row">
-                            <div class="col-lg-12 col-md-12">
-                                <div class="form-box">
-                                    <input type="text" name="name" placeholder="Your Name">
-                                </div>
-                            </div>
-                            <div class="col-lg-12 col-md-12">
-                                <div class="form-box">
-                                    <input type="email" name="name" placeholder="E-Mail Address">
-                                </div>
-                            </div>
-                            <div class="col-lg-12 col-md-12">
-                                <div class="form-box">
-                                    <input type="text" name="name" placeholder="Phone No">
-                                </div>
-                            </div>
-                            <div class="col-lg-12 col-md-12">
-                                <div class="form-box">
-                                    <input type="text" name="name" placeholder="Your LinkedIn profile">
-                                </div>
-                            </div>
-                            <div class="col-lg-12 col-md-12">
-                                <div class="form-box">
-                                    <input type="file" class="cv-input position-relative" name="name" placeholder="CV">
-                                </div>
-                            </div>
-                            <div class="col-lg-12 col-md-12">
-                                <div class="form-box">
-                                    <input type="text" name="name" placeholder="Samples/Portfolio">
-                                </div>
-                            </div>
-                            <div class="col-lg-12 col-md-12">
-                                <div class="form-box">
-                                    <input type="text" name="name" placeholder="Expected Salary">
-                                </div>
-                            </div>
-                            <div class="col-lg-12 col-md-12">
-                                <div class="form-box">
-                                    <input type="date" class="date-input position-relative" name="name" placeholder="Start Date">
-                                </div>
-                            </div>
-                            <div class="contact-form">
-                                <button type="submit" class="w-100"><i class="far fa-envelope"></i> Submit </button>
-                            </div>
-                        </div>
-                    </form>
-                    <div id="status"></div>
-                </div>
+					<div class="contact-form-box sidebar_Career rounded-4 bg-main2 top-0 style_two">
+						<!-- section title -->
+						<div class="section_title style_three style_four text-center ">
+							<h2 class="text-white">Apply here!</h2>
+						</div>
+						<form action="#" method="POST">
+							<div class="row">
+								<div class="col-lg-12 col-md-12">
+									<div class="form-box">
+										<input type="text" name="name" placeholder="Your Name">
+									</div>
+								</div>
+								<div class="col-lg-12 col-md-12">
+									<div class="form-box">
+										<input type="email" name="name" placeholder="E-Mail Address">
+									</div>
+								</div>
+								<div class="col-lg-12 col-md-12">
+									<div class="form-box">
+										<input type="text" name="name" placeholder="Phone No">
+									</div>
+								</div>
+								<div class="col-lg-12 col-md-12">
+									<div class="form-box">
+										<input type="text" name="name" placeholder="Your LinkedIn profile">
+									</div>
+								</div>
+								<div class="col-lg-12 col-md-12">
+									<div class="form-box">
+										<input type="file" class="cv-input position-relative" name="name" placeholder="CV">
+									</div>
+								</div>
+								<div class="col-lg-12 col-md-12">
+									<div class="form-box">
+										<input type="text" name="name" placeholder="Samples/Portfolio">
+									</div>
+								</div>
+								<div class="col-lg-12 col-md-12">
+									<div class="form-box">
+										<input type="text" name="name" placeholder="Expected Salary">
+									</div>
+								</div>
+								<div class="col-lg-12 col-md-12">
+									<div class="form-box">
+										<input type="date" class="date-input position-relative" name="name" placeholder="Start Date">
+									</div>
+								</div>
+								<div class="contact-form">
+									<button type="submit" class="w-100"><i class="far fa-envelope"></i> Submit </button>
+								</div>
+							</div>
+						</form>
+					</div>
 				</div>
             </div>
 			<div class="col-md-8 col-lg-8 col-12">
