--- a/E-Books.html
+++ b/E-Books.html
@@ -275,7 +275,9 @@
 						</div>
 					</div>
 					<div class="service_content">
-						<h4>DEVELOPMENT</h4>
+						<div class="header-button style_two">
+							<a href="#" class="py-2 mb-2 rounded-2">Get It Now</a>
+						</div>
 						<h3 class="h-auto mb-2"><a href="#" class="fs-5">Sustainability Consulting for Business Planning</a></h3>
 					</div>
 					<div class="meta-blog d-flex justify-content-center gap-4 mb-0">
@@ -295,7 +297,9 @@
 						</div>
 					</div>
 					<div class="service_content">
-						<h4>DEVELOPMENT</h4>
+						<div class="header-button style_two">
+							<a href="#" class="py-2 mb-2 rounded-2">Get It Now</a>
+						</div>
 						<h3 class="h-auto mb-2"><a href="#" class="fs-5">Sustainability Consulting for Business Planning</a></h3>
 					</div>
 					<div class="meta-blog d-flex justify-content-center gap-4 mb-0">
@@ -315,7 +319,9 @@
 						</div>
 					</div>
 					<div class="service_content">
-						<h4>DEVELOPMENT</h4>
+						<div class="header-button style_two">
+							<a href="#" class="py-2 mb-2 rounded-2">Get It Now</a>
+						</div>
 						<h3 class="h-auto mb-2"><a href="#" class="fs-5">Sustainability Consulting for Business Planning</a></h3>
 					</div>
 					<div class="meta-blog d-flex justify-content-center gap-4 mb-0">
@@ -345,12 +351,6 @@
 	</div>
 	<div class="service_shape_five bounce-animate2">
 		<img src="assets/images/main-home/choose_rotete.png" alt="">
-	</div>
-	<div class="service_shape_three style_six bounce-animate4">
-		<img src="assets/images/main-home/tir.png" alt="">
-	</div>
-	<div class="service_shape_seven bounce-animate">
-		<img src="assets/images/main-home/boxs.png" alt="">
 	</div>
 
 </section>
