--- a/E-BooksView.html
+++ b/E-BooksView.html
@@ -416,7 +416,7 @@
 			</div>
 			<div class="col-lg-6">
 				<div class="section_title">
-					<h3 class="mt-0 mb-3">Contact Details </h3>
+					<h3 class="mt-0 mb-3 m-contact-pho">Contact Details </h3>
 				</div>
 				<div class="contact_main_info">
 					<div class="call-do-action-info">
