--- a/ViewBlog.html
+++ b/ViewBlog.html
@@ -279,15 +279,15 @@
 					</div>
 
 
-					<div class="d-block d-md-none d-lg-none">
+
 						<div class="accordion" id="accordionExample">
 							<div class="accordion-item border-0">
 								<h2 class="accordion-header">
 									<button class="accordion-button accr-blog" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-										Accordion Item #1
+										Contents
 									</button>
 								</h2>
-								<div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+								<div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
 									<div class="accordion-body p-0">
 										<div class="sidebar_box style_two my-4">
 											<h2 class="sidebar_title">Contents</h2>
@@ -321,38 +321,9 @@
 								</div>
 							</div>
 						</div>
-					</div>
 
-					<div class="d-none d-md-block d-lg-block">
-						<div class="sidebar_box style_two my-4">
-							<h2 class="sidebar_title">Contents</h2>
-							<div class="sidebar_icon_box">
-								<div class="sidebar_text">
-									<p> <a href="#"> <i class="fa-solid fa-circle fa-2xs"></i> Sustainability Consulting for Business Planning </a> </p>
-								</div>
-							</div>
-							<div class="sidebar_icon_box">
-								<div class="sidebar_text">
-									<p> <a href="#"> <i class="fa-solid fa-circle fa-2xs"></i> Consulting Industry changing Business Landscape </a> </p>
-								</div>
-							</div>
-							<div class="sidebar_icon_box">
-								<div class="sidebar_text">
-									<p> <a href="#"> <i class="fa-solid fa-circle fa-2xs"></i> Globally disintermediate exten services main-home </a> </p>
-								</div>
-							</div>
-							<div class="sidebar_icon_box">
-								<div class="sidebar_text">
-									<p> <a href="#"> <i class="fa-solid fa-circle fa-2xs"></i> Globally disintermediate exten services main-home </a> </p>
-								</div>
-							</div>
-							<div class="sidebar_icon_box">
-								<div class="sidebar_text">
-									<p> <a href="#"> <i class="fa-solid fa-circle fa-2xs"></i> Sustainability Consulting for Business Planning </a> </p>
-								</div>
-							</div>
-						</div>
-					</div>
+
+
 
 					<div class="content-article">
 						<p>Lorem ipsum dolor sit amet. A earum facilis aut provident dolor et galisum aspernatur. Et voluptatem nulla ab minima galisum aut delectus quas rem alias sunt ad quia voluptatum vel labore incidunt. Ut corporis doloribus et quod sint rem dolorum doloribus aut assumenda animi. Eos expedita odio aut perspiciatis nisi et excepturi internos sed vitae omnis aut repellat nihil vel magnam consequatur id vitae nulla. </p>
@@ -385,7 +356,7 @@
 									</div>
 									<div class="col-lg-8">
 										<div class="section_title style_two text-style-mob">
-											<h2 class="fs-3 fw-normal text-white">Get “A Comprehensive Guide to Interpreting”</h2>
+											<h2 class="fs-3 px-3 fw-normal text-white">Get “A Comprehensive Guide to Interpreting”</h2>
 										</div>
 									</div>
 
@@ -588,7 +559,7 @@
 							<label>Subscribe to our newsletter</label>
 							<p class="mailchimp-form d-flex">
 								<input type="email" name="email" placeholder="Enter Your Email..." required="">
-								<button type="submit" class="w-25"> <i class="fa fa-envelope"></i> </button>
+								<button type="submit" class="w-25">  subscribe  </button>
 							</p>
 						</div>
 					</div>
