--- a/ViewService.html
+++ b/ViewService.html
@@ -536,6 +536,7 @@
 
 						</div>
 					</div>
+                    <h2 class="fs-6"> Here Title  .... </h2>
 					<p>Discover more integrated services from Mutajimoon Our linguistic, marketing and digital services provide you with integrated professional and creative solutions taking you and your business from local to global markets or vice versa.</p>
 				</div>
 				<div class="content_service_seven">
@@ -583,28 +584,63 @@
 				</div>
 			</div>
 			<div class="col-md-4 col-lg-4 col-12" style="width: 391px">
-				<div class="position-relative">
-					<div class="sidebar_box style_two sidebar_service sidebar_service_single my-2">
-						<h2 class="sidebar_title">Why Mutarjimoon?</h2>
-						<div class="sidebar_icon_box">
-							<div class="sidebar_text">
-								<p>  We provide you with integrated translation services, helping you achieve your goals and satisfy your businesses needs.  </p>
-							</div>
-						</div>
-						<ul class="list_view_service">
-							<li>On-time Delivery</li>
-							<li>Guidance and Support</li>
-							<li>Partnership</li>
-							<li>Data Security and Confidentiality</li>
-							<li>Advanced Translation Management</li>
-						</ul>
+                <div class="d-none d-md-block">
+                    <div class="position-relative">
+                        <div class="sidebar_box style_two sidebar_service sidebar_service_single my-2">
+                            <h2 class="sidebar_title">Why Mutarjimoon?</h2>
+                            <div class="sidebar_icon_box">
+                                <div class="sidebar_text">
+                                    <p>  We provide you with integrated translation services, helping you achieve your goals and satisfy your businesses needs.  </p>
+                                </div>
+                            </div>
+                            <ul class="list_view_service">
+                                <li>On-time Delivery</li>
+                                <li>Guidance and Support</li>
+                                <li>Partnership</li>
+                                <li>Data Security and Confidentiality</li>
+                                <li>Advanced Translation Management</li>
+                            </ul>
 
-						<div class="header-button style_two w-100">
-							<a href="#" class="d-block mt-3 text-center">Contact Us <i class="bi bi-arrow-right"></i></a>
-						</div>
-					</div>
-				</div>
-
+                            <div class="header-button style_two w-100">
+                                <a href="#" class="d-block mt-3 text-center">Contact Us <i class="bi bi-arrow-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-block d-md-none">
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item border-0">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button accr-blog rounded-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    Why Mutarjimoon?
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                                <div class="accordion-body p-0">
+                                    <div class="position-relative">
+                                        <div class="sidebar_box style_two sidebar_service sidebar_service_single my-2">
+                                            <div class="sidebar_icon_box border-top-0 pt-0 mt-0">
+                                                <div class="sidebar_text">
+                                                    <p>  We provide you with integrated translation services, helping you achieve your goals and satisfy your businesses needs.  </p>
+                                                </div>
+                                            </div>
+                                            <ul class="list_view_service">
+                                                <li>On-time Delivery</li>
+                                                <li>Guidance and Support</li>
+                                                <li>Partnership</li>
+                                                <li>Data Security and Confidentiality</li>
+                                                <li>Advanced Translation Management</li>
+                                            </ul>
+                                            <div class="header-button style_two w-100">
+                                                <a href="#" class="d-block mt-3 text-center">Contact Us <i class="bi bi-arrow-right"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 			</div>
 
 		</div>
