--- a/contact.html
+++ b/contact.html
@@ -317,7 +317,7 @@
 			</div>
 		</div>
 		<div class="col-lg-3">
-			<div class="block_contact_left rounded-3 p-3">
+			<div class="block_contact_left rounded-3 p-4">
 				<h2 class="text-white mb-3 fs-4 fw-normal">Direct Contact</h2>
 				<p class="text-white">Contact us, and be sure that our solutions are like your extended arm, providing you with everything you need.</p>
 				<div class="hero_btn style_twos me-0">
@@ -326,8 +326,8 @@
 			</div>
 
 			<div class="img_iso d-flex justify-content-center gap-3 mt-3">
-				<img src="assets/images/17100.png" height="100">
-				<img src="assets/images/9001.png" height="100">
+				<img src="assets/images/17100.png" height="75">
+				<img src="assets/images/9001.png" height="75">
 			</div>
 		</div>
 
@@ -488,7 +488,7 @@
 			</div>
 			<div class="col-lg-6">
 				<div class="section_title">
-					<h3 class="mt-0 mb-3">Contact Details </h3>
+					<h3 class="mt-0 mb-3 m-contact-pho">Contact Details </h3>
 				</div>
 				<div class="contact_main_info">
 					<div class="call-do-action-info">
