--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 													<li> <a href="#"> <img src="assets/images/main-home/Asset3.png" class="mx-2" height="24">  Interpretation  </a> </li>
 													<li> <a href="#"> <img src="assets/images/main-home/Asset9.png" class="mx-2" height="24">  MTPE  </a> </li>
 													<li> <a href="#"> <img src="assets/images/main-home/Asset7.png" class="mx-2" height="24">  Proofreading  </a> </li>
+													<li> <a href="#"> <img src="assets/images/main-home/Asset5.png" class="mx-2" height="24">  localization  </a> </li>
 												</ul>
 											</div>
 											<div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
@@ -271,7 +272,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
-				<div class="section_title text-center">
+				<div class="section_title text-center m-t-m">
 					<h2>Our Respected Partners</h2>
 				</div>
 			</div>
