--- a/Blogs.html
+++ b/Blogs.html
@@ -48,12 +48,11 @@
 <!-- loader -->
 <div class="loader-wrapper">
 	<div class="loader">
-		<img src="assets/images/logo.png" height="50">
+		<img src="assets/images/logoweb2025.gif" height="100">
 	</div>
 	<div class="loder-section left-section"></div>
 	<div class="loder-section right-section"></div>
 </div>
-
 <div class="topber_area style_two">
 	<div class="container">
 		<div class="row topber_upper align-items-center d-flex">
