--- a/E-Books.html
+++ b/E-Books.html
@@ -48,7 +48,7 @@
 <!-- loader -->
 <div class="loader-wrapper">
 	<div class="loader">
-		<img src="assets/images/logo.png" height="50">
+		<img src="assets/images/logoweb2025.gif" height="100">
 	</div>
 	<div class="loder-section left-section"></div>
 	<div class="loder-section right-section"></div>
@@ -271,7 +271,7 @@
 					<div class="service_thumb">
 						<img src="assets/images/blog_3.png" alt="">
 						<div class="service_icon">
-							<a href="#"><img src="assets/images/main-home/service_icon.png" alt=""></a>
+							<a href="#"><img src="assets/images/tap.svg" alt="" class="w-25"></a>
 						</div>
 					</div>
 					<div class="service_content">
@@ -293,7 +293,7 @@
 					<div class="service_thumb">
 						<img src="assets/images/blog_3.png" alt="">
 						<div class="service_icon">
-							<a href="#"><img src="assets/images/main-home/service_icon.png" alt=""></a>
+							<a href="#"><img src="assets/images/tap.svg" alt="" class="w-25"></a>
 						</div>
 					</div>
 					<div class="service_content">
@@ -315,7 +315,7 @@
 					<div class="service_thumb">
 						<img src="assets/images/blog_3.png" alt="">
 						<div class="service_icon">
-							<a href="#"><img src="assets/images/main-home/service_icon.png" alt=""></a>
+							<a href="#"><img src="assets/images/tap.svg" alt="" class="w-25"></a>
 						</div>
 					</div>
 					<div class="service_content">
