--- a/ViewBlog.html
+++ b/ViewBlog.html
@@ -48,12 +48,11 @@
 <!-- loader -->
 <div class="loader-wrapper">
 	<div class="loader">
-		<img src="assets/images/logo.png" height="50">
+		<img src="assets/images/logoweb2025.gif" height="100">
 	</div>
 	<div class="loder-section left-section"></div>
 	<div class="loder-section right-section"></div>
 </div>
-
 <div class="topber_area style_two">
 	<div class="container">
 		<div class="row topber_upper align-items-center d-flex">
@@ -460,7 +459,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4 col-lg-4 col-12 order-mob">
+			<div class="col-md-4 col-lg-4 col-12 order-mob" style="width: 391px">
 				<div class="sidebar_blog">
 					<div class="social_icon_share my-4">
 						<label class="text-black mb-3"> Share this job </label>
