--- a/ViewCareer.html
+++ b/ViewCareer.html
@@ -48,7 +48,7 @@
 <!-- loader -->
 <div class="loader-wrapper">
 	<div class="loader">
-		<img src="assets/images/logo.png" height="50">
+		<img src="assets/images/logoweb2025.gif" height="100">
 	</div>
 	<div class="loder-section left-section"></div>
 	<div class="loder-section right-section"></div>
@@ -295,7 +295,7 @@
 					<p>Or fill this application form.</p>
 				</div>
 			</div>
-			<div class="col-md-4 col-lg-4 col-12" style="width: 391px">
+			<div class="col-md-4 col-lg-4 col-12">
 				<div class="social_icon_share">
 					<label class="text-black mb-3"> Share this job </label>
 					<div class="sharing">
