--- a/E-BooksView.html
+++ b/E-BooksView.html
@@ -48,7 +48,7 @@
 <!-- loader -->
 <div class="loader-wrapper">
 	<div class="loader">
-		<img src="assets/images/logo.png" height="50">
+		<img src="assets/images/logoweb2025.gif" height="100">
 	</div>
 	<div class="loder-section left-section"></div>
 	<div class="loder-section right-section"></div>
