--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <!-- loader -->
 <div class="loader-wrapper">
 	<div class="loader">
-		<img src="assets/images/logo.png" height="50">
+		<img src="assets/images/logoweb2025.gif" height="100">
 	</div>
 	<div class="loder-section left-section"></div>
 	<div class="loder-section right-section"></div>
@@ -993,6 +993,11 @@
 	</section>
 </footer>
 
+<div class="block_whatsapp">
+	<a href="https://wa.me/+201065962515" rel="noopener" target="_blank" class="btn_whatsapp" data-toggle="tooltip" data-placement="right" title="Whats App">
+		<i class="fa-brands fa-whatsapp"></i>
+	</a>
+</div>
 
 <!-- Start Search Popup Section -->
 <div class="search-popup">
