--- a/ViewService.html
+++ b/ViewService.html
@@ -542,7 +542,7 @@
 				<div class="content_service_seven">
 					<div class="row">
 						<div class="col-lg-4 col-md-6 col-6">
-							<div class="service_single_item bg_one shadow-none style_two style_four mt-3">
+							<div class="service_single_item shadow-none style_two style_four mt-3">
 								<div class="service_content">
 									<div class="service_icon">
 										<img src="assets/images/thumb.png" class="icon-img" width="40" alt="">
@@ -555,7 +555,7 @@
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6 col-6">
-							<div class="service_single_item bg_one shadow-none style_two style_four mt-3">
+							<div class="service_single_item shadow-none style_two style_four mt-3">
 								<div class="service_content">
 									<div class="service_icon">
 										<img src="assets/images/thumb.png" class="icon-img" width="40" alt="">
@@ -568,7 +568,7 @@
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6 col-6">
-							<div class="service_single_item bg_tow shadow-none style_two style_four mt-3">
+							<div class="service_single_item shadow-none style_two style_four mt-3">
 								<div class="service_content">
 									<div class="service_icon">
 										<img src="assets/images/thumb.png" class="icon-img" width="40" alt="">
@@ -583,7 +583,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4 col-lg-4 col-12" style="width: 391px">
+			<div class="col-md-4 col-lg-4 order-mob-1 col-12" style="width: 391px">
                 <div class="d-none d-md-block">
                     <div class="position-relative">
                         <div class="sidebar_box style_two sidebar_service sidebar_service_single my-2">
