--- a/E-BooksView.html
+++ b/E-BooksView.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en-US">
+<html lang="en-US" dir="rtl">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -40,6 +40,9 @@
 	<link rel="stylesheet" href="assets/css/scroll-up.css" type="text/css" media="all">
 	<link rel="stylesheet" href="assets/fonts/stylesheet.css" type="text/css" media="all">
 
+	<!-- RTL CSS -->
+	<!--		<link rel="stylesheet" href="assets/fonts_Ar/stylesheet.css" type="text/css" media="all">-->
+	<!--		<link rel="stylesheet" href="assets/css/rtl.css" type="text/css" media="all">-->
 </head>
 
 <body>
@@ -243,7 +246,7 @@
 		<div class="row">
 			<div class="col-lg-4 text-left"></div>
 			<div class="col-lg-8 text-left">
-				<div class="breadcumb-content">
+				<div class="breadcumb-content breadcumb-content-ebook">
 					<div class="breadcumb-title">
 						<h1 class="fs-2">How can you get interpreting services with the highest quality ever?</h1>
 						<p>A comprehensive guide to getting professional interpreting services.</p>
