--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en-US">
+<html lang="en-US" dir="ltr">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -41,6 +41,9 @@
 	<link rel="stylesheet" href="assets/fonts/stylesheet.css" type="text/css" media="all">
 
 
+	<!-- RTL CSS -->
+<!--	<link rel="stylesheet" href="assets/fonts_Ar/stylesheet.css" type="text/css" media="all">-->
+<!--	<link rel="stylesheet" href="assets/css/rtl.css" type="text/css" media="all">-->
 
 </head>
 
