--- a/Blogs.html
+++ b/Blogs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en-US">
+<html lang="en-US" dir="ltr">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -39,8 +39,11 @@
 	<link rel="stylesheet" href="assets/css/coustom-animation.css" type="text/css" media="all">
 	<link rel="stylesheet" href="assets/css/scroll-up.css" type="text/css" media="all">
 	<link rel="stylesheet" href="assets/fonts/stylesheet.css" type="text/css" media="all">
-	<!-- modernizr js -->
-	<script src="assets/js/vendor/modernizr-3.5.0.min.js"></script>
+
+    <!-- RTL CSS -->
+<!--    	<link rel="stylesheet" href="assets/fonts_Ar/stylesheet.css" type="text/css" media="all">-->
+<!--    	<link rel="stylesheet" href="assets/css/rtl.css" type="text/css" media="all">-->
+
 </head>
 
 <body>
@@ -402,7 +405,7 @@
 	</div>
 </section>
 
-<section class="testimonial_area style_two">
+<section class="testimonial_area style_two ltr">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
