--- a/ViewServiceTow.html
+++ b/ViewServiceTow.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en-US">
+<html lang="en-US" dir="rtl">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -39,6 +39,10 @@
 	<link rel="stylesheet" href="assets/css/coustom-animation.css" type="text/css" media="all">
 	<link rel="stylesheet" href="assets/css/scroll-up.css" type="text/css" media="all">
 	<link rel="stylesheet" href="assets/fonts/stylesheet.css" type="text/css" media="all">
+
+	<!-- RTL CSS -->
+<!--	<link rel="stylesheet" href="assets/fonts_Ar/stylesheet.css" type="text/css" media="all">-->
+<!--	<link rel="stylesheet" href="assets/css/rtl.css" type="text/css" media="all">-->
 
 </head>
 
