--- a/ViewService.html
+++ b/ViewService.html
@@ -436,7 +436,8 @@
 									</h2>
 									<div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
 										<div class="accordion-body">
-											<strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+										    <a href="https://example.com" target="_blank" class="btn btn-primary mt-2">Go to Example.com</a>
+											<a href="#"> transcription </a> <strong>   is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
 										</div>
 									</div>
 								</div>
@@ -822,9 +823,10 @@
 	<!-- jquery scrollup js -->
 	<script src="assets/js/jquery.scrollUp.js"></script>
 	<!-- theme js -->
-	<script src="assets/js/theme.js"></script>
+	
 	<!-- barfiller -->
 	<script src="assets/js/jquery.barfiller.js"></script>
+
 
 </body>
 
