--- a/index.html
+++ b/index.html
@@ -281,7 +281,73 @@
 				</div>
 			</div>
 		</div>
+		
 		<div class="row">
+			<div class="service_list2 owl-carousel">
+				<div class="col-lg-12">
+					<div class="brand-thumb">
+						<a href="#"><img src="assets/images/c-1.png" alt=""></a>
+					</div>
+				</div>
+				<div class="col-lg-12">
+					<div class="brand-thumb">
+						<a href="#"><img src="assets/images/c-2.png" alt=""></a>
+					</div>
+				</div>
+				<div class="col-lg-12">
+					<div class="brand-thumb">
+						<a href="#"><img src="assets/images/c-3.png" alt=""></a>
+					</div>
+				</div>
+				<div class="col-lg-12">
+					<div class="brand-thumb">
+						<a href="#"><img src="assets/images/c-4.png" alt=""></a>
+					</div>
+				</div>
+				<div class="col-lg-12">
+					<div class="brand-thumb">
+						<a href="#"><img src="assets/images/c-1.png" alt=""></a>
+					</div>
+				</div>
+				<div class="col-lg-12">
+					<div class="brand-thumb">
+						<a href="#"><img src="assets/images/c-2.png" alt=""></a>
+					</div>
+				</div>
+				<div class="col-lg-12">
+					<div class="brand-thumb">
+						<a href="#"><img src="assets/images/c-3.png" alt=""></a>
+					</div>
+				</div>
+				<div class="col-lg-12">
+					<div class="brand-thumb">
+						<a href="#"><img src="assets/images/c-4.png" alt=""></a>
+					</div>
+				</div>
+				<div class="col-lg-12">
+					<div class="brand-thumb">
+						<a href="#"><img src="assets/images/c-1.png" alt=""></a>
+					</div>
+				</div>
+				<div class="col-lg-12">
+					<div class="brand-thumb">
+						<a href="#"><img src="assets/images/c-2.png" alt=""></a>
+					</div>
+				</div>
+				<div class="col-lg-12">
+					<div class="brand-thumb">
+						<a href="#"><img src="assets/images/c-3.png" alt=""></a>
+					</div>
+				</div>
+				<div class="col-lg-12">
+					<div class="brand-thumb">
+						<a href="#"><img src="assets/images/c-4.png" alt=""></a>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<div class="row d-none">
 			<div class="marquee style1">
 				<div class="marquee-block">
 					<div class="brand-thumb">
